<resources>
    <string name="app_name">MyWidgetsimplements</string>
    <string name="testviewname">이름</string>
    <string name="textviewage">나이</string>
    <string name="edittextnamehint">이름을 입력하세요</string>
    <string name="edittextagehint">나이를 입력하세요</string>
    <string name="textviewsex">성별</string>
    <string name="rbtn1female">여자</string>
    <string name="rbtn2male">남자</string>
    <string name="textviewjob">직업</string>
    <string name="rbtn3student">학생</string>
    <string name="rbnt4worker">직장인</string>
    <string name="btnresult">결과보기</string>
</resources>
