<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:padding="10dp" >

    <TextView
        android:id="@+id/textviewname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/testviewname"
        android:textSize="20dp"
         />
    <EditText
        android:id="@+id/edittextname"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/edittextnamehint"/>
    <TextView
        android:id="@+id/textviewname2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textviewage"
        android:textSize="20dp"
        />
    <EditText
        android:id="@+id/edittextage"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/edittextagehint"/>
    <TextView
        android:id="@+id/textviewsex"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textviewsex"
        android:textSize="20dp"
       />
    <RadioGroup
        android:id="@+id/rgroupsex"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RadioButton
            android:id="@+id/rbtn1"
            android:text="@string/rbtn1female"
            android:layout_width="200dp"
            android:layout_height="40dp" />
        <RadioButton
            android:id="@+id/rbtn2"
            android:text="@string/rbtn2male"
            android:layout_width="200dp"
            android:layout_height="40dp" />
    </RadioGroup>
    <TextView
        android:id="@+id/textviewjob"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textviewjob"
        android:textSize="20dp"
        />
    <RadioGroup
        android:id="@+id/rgroupjob"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RadioButton
            android:id="@+id/rbtn3"
            android:text="@string/rbtn3student"
            android:layout_width="200dp"
            android:layout_height="40dp" />
        <RadioButton
            android:id="@+id/rbtn4"
            android:text="@string/rbnt4worker"
            android:layout_width="200dp"
            android:layout_height="40dp" />
    </RadioGroup>
    <Button
        android:id="@+id/btnresult"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:text="@string/btnresult"
        />
    <TextView
        android:id="@+id/textviewresult"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>